--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/runtime": "^7.5.5",
     "autoprefixer": "^9.5.1",
     "jquery": "^3.5.1",
+    "jquery-mask-plugin": "^1.14.16",
     "normalize.css": "^8.0.1",
     "parcel-plugin-custom-dist-structure": "^1.1.3",
     "postcss-modules": "^1.4.1",
